# port_game

./: .gitignore  Cargo.toml  README.md  WEB_INSTRUCTIONS.md  WEB_README.md
.copilot/: mikado.md  rust-architect.md  rust-doc.md  rust-expert.md  rust-integration.md  rust-mikado.md  rust-quality.md  rust-tdd.md
benches/: mcts_benchmark.rs
src/: lib.rs  main.rs  utils.rs  wasm.rs
src/application/: commands.rs  handlers.rs  mod.rs  queries.rs
src/cli/: display.rs  input.rs  mod.rs
src/domain/: aggregates.rs  entities.rs  events.rs  mod.rs  value_objects.rs
src/game/: events.rs  mod.rs
src/infrastructure/: event_store.rs  mod.rs
src/mcts/: actions.rs  mod.rs  simulation.rs  tree.rs
tests/: cqrs_test.rs  game_flow_test.rs  gameplay_integration_test.rs  integration_test.rs  random_events_test.rs  wasm_test.rs
web/: package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.css  App.tsx
web/src/components/: Berth.tsx  Crane.tsx  GameControls.tsx  Port.tsx  Ship.tsx
web/src/hooks/: useGame.ts
web/src/types/: game.ts  port_game.d.ts
web/test-results/: .last-run.json
web/tests-e2e/: gameplay.spec.ts  minimal.spec.ts
